--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <h2>Blue Water</h2>
         <h2>Blue Water</h2>
     </div>
+    <div class="mobile">
+        <div class="blue-text">
+            <p>Blue</p>
+        </div>
+        <div class="mobile content">
+            <h2>Water</h2>
+            <h2>Water</h2>
+        </div>
+        <div class="ship-text">
+            <p>Shipping</p>
+        </div>
+    </div>
 
 </body>
 </html>
